--- a/.devcontainer/armhf/devcontainer.json
+++ b/.devcontainer/armhf/devcontainer.json
@@ -1,8 +1,5 @@
 {
   "name": "armhf",
   "image": "effectiverange/er-devc-armhf:latest",
-  "privileged": true,
-  "containerEnv": {
-    "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}"
-  }
+  "privileged": true
 }
