--- a/debian/rules
+++ b/debian/rules
@@ -8,4 +8,4 @@ override_dh_builddeb:
 	dh_builddeb $@ --destdir=$(ARTIFACTS_DIR) -- -Zgzip
 
 %:
-	dh $@ --with python-virtualenv --python /usr/bin/python3 --with=systemd
+	dh $@ --with python-virtualenv --python python3 --with=systemd
