Update build process

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,10 @@
+[pack-python]
+default = dh-virtualenv
+packaging =
+    wheel
+    dh-virtualenv
+dh-virtualenv = -s service/wifi-manager.service
+
 [mypy]
 packages = bin,wifi_utility,wifi_event,wifi_wpa,wifi_service,wifi_manager
 strict = True
