Add country code to wpa and hostapd configs, disable wlan power saving mode

--- a/config/wifi-manager.conf
+++ b/config/wifi-manager.conf
@@ -8,6 +8,7 @@ hotspot_ip = 192.168.100.1
 dhcp_range = 192.168.100.2,192.168.100.254,255.255.255.0,2m
 server_port = 8080
 interface = wlan0
+country = HU
 ssdp_enabled = true
 ssdp_usn_pattern = erid:{{hostname}}
 ssdp_st_pattern = er:edge:{{device_role}}
