Add country code to wpa and hostapd config setup, disable wlan power save mode on startup (#12)

--- a/tests/expected/wpa_supplicant.setup.conf
+++ b/tests/expected/wpa_supplicant.setup.conf
@@ -1,3 +1,7 @@
+ctrl_interface=/run/wpa_supplicant
+update_config=1
+ap_scan=1
+country=US
 
 network={
 	ssid="test-network1"
@@ -8,7 +12,7 @@ network={
 
 network={
 	ssid=test-network2
-	psk=new-password2
-	disabled=0
+	psk=test-password2
+	disabled=1
 	priority=1
 }
