--- a/tests/expected/wpa_supplicant.updated.conf
+++ b/tests/expected/wpa_supplicant.updated.conf
@@ -1,3 +1,7 @@
+ctrl_interface=/run/wpa_supplicant
+update_config=1
+ap_scan=1
+country=GB
 
 network={
 	ssid="test-network1"
@@ -8,14 +12,7 @@ network={
 
 network={
 	ssid=test-network2
-	psk=test-password2
-	disabled=1
-	priority=1
-}
-
-network={
-	ssid="test-network3"
-	psk="test-password3"
+	psk=new-password2
 	disabled=0
-	priority=2
+	priority=1
 }
