Add bookworm support with network manager dbus integration

--- a/config/wifi-manager.conf
+++ b/config/wifi-manager.conf
@@ -1,14 +1,23 @@
-[DEFAULT]
+[logging]
+log_level = info
+log_file = /var/log/effective-range/wifi-manager/wifi-manager.log
+
+[api]
+api_server_port = 8080
+
+[device]
 device_role = edge
-hostname_pattern = er-{{device_role}}-{{cpu_serial}}
-password = p4ssw0rd
+device_hostname = er-{{device_role}}-{{cpu_serial}}
+
+[wlan]
+wlan_interface = wlan0
+wlan_country = HU
+
+[client]
 client_timeout = 15
-peer_timeout = 120
-hotspot_ip = 192.168.100.1
-dhcp_range = 192.168.100.2,192.168.100.254,255.255.255.0,2m
-server_port = 8080
-interface = wlan0
-country = HU
-ssdp_enabled = true
-ssdp_usn_pattern = erid:{{hostname}}
-ssdp_st_pattern = er:edge:{{device_role}}
+
+[hotspot]
+hotspot_password = p4ssw0rd
+hotspot_peer_timeout = 120
+hotspot_static_ip = 192.168.100.1
+hotspot_dhcp_range = 192.168.100.2,192.168.100.254,255.255.255.0,2m
