--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 package3=wifi-manager
 build-depends=dh-python, dh-virtualenv, libgirepository1.0-dev, libcairo-gobject2
-depends3=dbus, libdbus-1-dev, libdbus-glib-1-dev, libgirepository1.0-dev, libcairo2-dev, libsystemd-dev, python3-gi, python3-distutils, wpasupplicant, hostapd, dnsmasq, dhcpcd-dbus, avahi-daemon, iptables
+depends3=dbus, libdbus-1-dev, libdbus-glib-1-dev, libgirepository1.0-dev, libcairo2-dev, libsystemd-dev, libnm-dev, python3-gi, python3-distutils, wpasupplicant, hostapd, dnsmasq, avahi-daemon, iptables
