--- a/tests/expected/wpa_supplicant.updated.conf
+++ b/tests/expected/wpa_supplicant.updated.conf
@@ -6,14 +6,14 @@ country=GB
 
 network={
 	ssid="test-network1"
-	psk="test-password1"
-	disabled=0
+	psk="new-password1"
+	disabled=1
 	priority=0
 }
 
 network={
 	ssid=test-network2
-	psk=new-password2
-	disabled=0
+	psk=test-password2
+	disabled=1
 	priority=1
 }
