--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ default = dh-virtualenv
 packaging =
     wheel
     dh-virtualenv
-dh-virtualenv = -s service/wifi-manager.service
+dh-virtualenv = -s service/wifi-manager.service -S=-ldebian/wifi-manager/opt/venvs/wifi-manager/lib/python3.11/site-packages/cysystemd.libs
 
 [mypy]
 packages = bin,wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager
