Add bookworm support with network manager dbus integration (#14)

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,10 @@ default = dh-virtualenv
 packaging =
     wheel
     dh-virtualenv
-dh-virtualenv = -s service/wifi-manager.service
+dh-virtualenv = -s service/wifi-manager.service -S=-ldebian/wifi-manager/opt/venvs/wifi-manager/lib/python3.11/site-packages/cysystemd.libs
 
 [mypy]
-packages = bin,wifi_utility,wifi_event,wifi_wpa,wifi_service,wifi_manager
+packages = bin,wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager
 strict = True
 disallow_subclassing_any = False
 disallow_untyped_decorators = False
@@ -40,6 +40,10 @@ per-file-ignores =
 # F401: imported but unused
 # F403: import * used; unable to detect undefined names
     __init__.py: F401,F403
+# E402: module level import not at top of file
+    wifi-manager.py: E402
+    wifi_service/nmService.py: E402
+    wifi_dbus/nmDbus.py: E402
 
 [tool:pytest]
 addopts = --capture=no --verbose
@@ -49,11 +53,11 @@ python_classes = *Test
 [coverage:run]
 relative_files = true
 branch = True
-source = wifi_utility,wifi_event,wifi_wpa,wifi_service,wifi_manager
+source = wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager
 omit =
     wifi_utility/platformAccess.py
     wifi_utility/reusableTimer.py
-    wifi_wpa/wpaDbus.py
+    wifi_dbus/wsDbus.py
 
 [coverage:report]
 ; Regexes for lines to exclude from consideration
