--- a/config/wifi-manager.conf
+++ b/config/wifi-manager.conf
@@ -21,3 +21,4 @@ hotspot_password = p4ssw0rd
 hotspot_peer_timeout = 120
 hotspot_static_ip = 192.168.100.1
 hotspot_dhcp_range = 192.168.100.2,192.168.100.254,255.255.255.0,2m
+hotspot_startup_delay = 5
