Add connection monitoring

--- a/config/wifi-manager.conf
+++ b/config/wifi-manager.conf
@@ -22,3 +22,11 @@ hotspot_peer_timeout = 120
 hotspot_static_ip = 192.168.100.1
 hotspot_dhcp_range = 192.168.100.2,192.168.100.254,255.255.255.0,2m
 hotspot_startup_delay = 5
+
+[connection]
+connection_ping_interval = 60
+connection_ping_timeout = 5
+connection_ping_fail_limit = 5
+connection_restore_actions =
+    reset-wireless
+    restart-service openvpn@*.service
