--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ packaging =
 dh-virtualenv = -s service/wifi-manager.service -S=-ldebian/wifi-manager/opt/venvs/wifi-manager/lib/python3.11/site-packages/cysystemd.libs
 
 [mypy]
-packages = bin,wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager
+packages = bin,wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager,wifi_connection
 strict = True
 disallow_subclassing_any = False
 disallow_untyped_decorators = False
@@ -26,8 +26,8 @@ ignore_missing_imports = True
 [mypy-waitress.server]
 ignore_missing_imports = True
 
-[mypy-ssdpy]
-ignore_missing_imports = True
+[mypy-ping3]
+follow_untyped_imports = True
 
 [flake8]
 exclude = debian,build,dist
@@ -53,7 +53,7 @@ python_classes = *Test
 [coverage:run]
 relative_files = true
 branch = True
-source = wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager
+source = wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager,wifi_connection
 omit =
     wifi_utility/platformAccess.py
     wifi_utility/reusableTimer.py
