Init config file after install

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,9 @@ default = dh-virtualenv
 packaging =
     wheel
     dh-virtualenv
-dh-virtualenv = -s service/wifi-manager.service -S=-ldebian/wifi-manager/opt/venvs/wifi-manager/lib/python3.11/site-packages/cysystemd.libs
+dh-virtualenv = -S=-ldebian/wifi-manager/opt/venvs/wifi-manager/lib/python3.11/site-packages/cysystemd.libs
+service = service/wifi-manager.service
+postinst = scripts/wifi-manager.postinst
 
 [mypy]
 packages = bin,wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager,wifi_connection
