Update flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ ignore_missing_imports = True
 follow_untyped_imports = True
 
 [flake8]
-exclude = debian,build,dist
+exclude = build,dist,venv,.eggs
 max-line-length = 120
 max-complexity = 10
 count = True
