Update packaging, stability improvements (#34)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,10 @@
 [pack-python]
-default = dh-virtualenv
+default = wheel-deb
 packaging =
     wheel
-    dh-virtualenv
-dh-virtualenv = -S=-ldebian/wifi-manager/opt/venvs/wifi-manager/lib/python3.11/site-packages/cysystemd.libs
+    wheel-deb
+wheel-deb = -A=all
 service = service/wifi-manager.service
-postinst = scripts/wifi-manager.postinst
 
 [mypy]
 packages = bin,wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager,wifi_connection
@@ -32,7 +31,7 @@ ignore_missing_imports = True
 follow_untyped_imports = True
 
 [flake8]
-exclude = debian,build,dist
+exclude = build,dist,venv,.eggs
 max-line-length = 120
 max-complexity = 10
 count = True
