--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,11 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [main]
-    tags: [v*.*.*]
+    branches: [ main ]
+    tags: [ v*.*.* ]
 
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
     types:
       - synchronize
       - opened
@@ -14,7 +14,7 @@ on:
 
 jobs:
   call_ci:
-    uses: EffectiveRange/ci-workflows/.github/workflows/python-ci.yaml@v5
+    uses: EffectiveRange/ci-workflows/.github/workflows/python-ci.yaml@latest-python
     with:
-      package-type: 'wheel, dh-virtualenv'
-      package-architecture: '["armhf", "arm64"]'
+      package-type: 'wheel, wheel-deb'
+      package-architecture: '["amd64"]'
