Add sound based self identification

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,6 @@ default = wheel-deb
 packaging =
     wheel
     wheel-deb
-wheel-deb = -A=all
 service = service/wifi-manager.service
 
 [mypy]
@@ -29,6 +28,9 @@ ignore_missing_imports = True
 
 [mypy-ping3]
 follow_untyped_imports = True
+
+[mypy-gpiozero]
+ignore_missing_imports = True
 
 [flake8]
 exclude = build,dist,venv,.eggs
