Only open GPIO resource when used for blinking

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ source = wifi_utility,wifi_event,wifi_dbus,wifi_config,wifi_service,wifi_manager
 omit =
     wifi_utility/platformAccess.py
     wifi_utility/reusableTimer.py
+    wifi_utility/blinkDevice.py
     wifi_dbus/wsDbus.py
 
 [coverage:report]
